[project]
name = "comfyui-node-template"
description = "A custom node for ComfyUI with device support and progress bar"
version = "0.0.1"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
dependencies = [
    "torch",
    "numpy",
    "Pillow",
]

[project.urls]
Repository = "https://github.com/your-username/your-repo-name"

[tool.comfy]
PublisherId = "your-publisher-id"
DisplayName = "ComfyUI Node Template"
Icon = ""

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
